[package]
name = "rspow"
version = "0.3.0"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
description = "A multi-algorithm proof-of-work library in rust"
homepage = "https://github.com/zolagonano/rspow.git"
repository = "https://github.com/zolagonano/rspow.git"
keywords = ["pow"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
equix = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
ripemd = "0.1.3"
scrypt = "0.11.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
